обновленны модели товара, добавлены способы стирки, обновлена система скидок, состав. для ввода данных подправлены catalog.html и product.html

--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -25,14 +25,14 @@
             <a class="py-2 py-lg-4" href="{% url "catalog:product" product.slug %}">
                 <div class="product_item_name">{{ product.name }}</div>
 
-                {% if product.discount %}
+                {% if product.discount_price %}
                     <div class="product_item_price">
                         <div class="price_old">{{ product.price }} &#8381;</div>
-                        <div>{{ product.sell_price }} &#8381;</div>
+                        <div>{{ product.discount_price }} &#8381;</div>
                     </div>
 
                 {% else %}
-                    <div class="product_item_price">{{ product.sell_price }} &#8381;</div>
+                    <div class="product_item_price">{{ product.price }} &#8381;</div>
                 
                 {% endif %}
             </a>
