добавил базовый шаблон info_base/info_page который можно создать через админку. также исправил опечатку в css - было две запятых

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -707,7 +707,7 @@ a, a:hover, a:active, a:focus{
 		position: sticky;
 		top: 120px;
 	}
-	.select_list,,
+	.select_list,
 	.select_head {
 		min-width: 322px;
 		font-size: 1.5rem;
