--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,10 +1,156 @@
 {% extends "main/base.html" %}
 {% load static %}
 
-{% block css %}
-  <link rel="stylesheet" href="{% static "css/stylecard.css" %}">
-{% endblock %}
-
 {% block content %}
-  {{ content }}
-{% endblock  %}
+
+<div class="text-center mb_3_8 mb-lg_6">
+  <h1>Lorem ipsum </h1>
+  <p>Dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet pellentesque lectus, et imperdiet nisi sodales vel. Integer viverra volutpat urna ac laoreet. Etiam vitae lacus ac erat consectetur porttitor et sit amet ipsum. Nullam purus arcu, ultricies eu nibh et, pretium eleifend diam. Pellentesque dignissim augue ligula, nec egestas ante auctor sed. Aenean aliquam facilisis tempus. Donec auctor porttitor ante ut tincidunt. </p>
+</div>
+<div class="product_left mb_2_8 mb-lg_5">
+  <div class="collection_name mb-4">Коллекция «Название коллекции»</div>
+  <div class="row flex-column flex-lg-row justify-content-lg-between">
+    <div class="col-12 col-lg-8 mb-4 mb-lg-0 collection_slider_block">
+      <div id="carousel1" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carousel1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carousel1" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carousel1" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="/static/images/product-slide.jpg" class="d-block w-100" alt="">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/images/product-slide2.jpg" class="d-block w-100" alt="">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/images/product-slide.jpg" class="d-block w-100" alt="">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Предыдущий</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carousel1" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Следующий</span>
+        </button>
+        
+      </div>
+    </div>
+    <div class="d-flex d-lg-block justify-content-between col-12 col-lg-4 px-0 product_aside">
+      <div class="product_item w-48 w-lg-100 mb-lg-3">
+        <div class="product_item_img">
+          <a href="/goods/product.html">
+            <img class="first_img" src="/static/images/product-left.jpg" class="d-block w-100" alt="">
+            <img class="second_img" src="/static/images/product-left2.jpg" class="d-block w-100" alt="">
+          </a>
+        </div>
+        <div class="product_item_info">
+          <a class="py-2 py-lg-4" href="/goods/product.html">
+            <div class="product_item_name">Название товара</div>
+            <div class="product_item_price">от 9 999 ₽</div>
+          </a>
+        </div>
+      </div>
+      <div class="product_item w-48 w-lg-100">
+        <div class="product_item_img">
+          <a href="/goods/product.html">
+            <img class="first_img" src="/static/images/product-left.jpg" class="d-block w-100" alt="">
+            <img class="second_img" src="/static/images/product-left2.jpg" class="d-block w-100" alt="">
+          </a>
+        </div>
+        <div class="product_item_info">
+          <a class="py-2 py-lg-4" href="/goods/product.html">
+            <div class="product_item_name">Название товара</div>
+            <div class="product_item_price">
+              <div class="price_old">99 999 ₽</div>
+              <div>9 999 ₽</div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+{% comment %} 
+<div class="text-center mb_3_8 mb-lg_7_5">
+  <h2 class="h1">Lorem ipsum </h2>
+  <p>Dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet pellentesque lectus, et imperdiet nisi sodales vel. Integer viverra volutpat urna ac laoreet. Etiam vitae lacus ac erat consectetur porttitor et sit amet ipsum. Nullam purus arcu, ultricies eu nibh et, pretium eleifend diam. Pellentesque dignissim augue ligula, nec egestas ante auctor sed. Aenean aliquam facilisis tempus. Donec auctor porttitor ante ut tincidunt. </p>
+</div>
+<div class="product_right mb_2_8 mb-lg_5">
+  <div class="collection_name mb-4">Коллекция «Название коллекции»</div>
+  <div class="row flex-column flex-lg-row justify-content-lg-between">
+    <div class="col-12 col-lg-8 mb-4 mb-lg-0 collection_slider_block">
+      <div id="carousel2" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carousel2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carousel2" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carousel2" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="/static/images/product-slide.jpg" class="d-block w-100" alt="">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/images/product-slide2.jpg" class="d-block w-100" alt="">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/images/product-slide.jpg" class="d-block w-100" alt="">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Предыдущий</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carousel2" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Следующий</span>
+        </button>
+      </div>
+    </div>
+    <div class="d-flex d-lg-block justify-content-between col-12 col-lg-4 px-0 product_aside">
+      <div class="product_item w-48 w-lg-100 mb-lg-3">
+        <div class="product_item_img">
+          <a href="/goods/product.html">
+            <img class="first_img" src="/static/images/product-left.jpg" class="d-block w-100" alt="">
+            <img class="second_img" src="/static/images/product-left2.jpg" class="d-block w-100" alt="">
+          </a>
+        </div>
+        <div class="product_item_info">
+          <a class="py-2 py-lg-4" href="/goods/product.html">
+            <div class="product_item_name">Название товара</div>
+            <div class="product_item_price">от 9 999 ₽</div>
+          </a>
+        </div>
+      </div>
+      <div class="product_item w-48 w-lg-100">
+        <div class="product_item_img">
+          <a href="/goods/product.html">
+            <img class="first_img" src="/static/images/product-left.jpg" class="d-block w-100" alt="">
+            <img class="second_img" src="/static/images/product-left2.jpg" class="d-block w-100" alt="">
+          </a>
+        </div>
+        <div class="product_item_info">
+          <a class="py-2 py-lg-4" href="/goods/product.html">
+            <div class="product_item_name">Название товара</div>
+            <div class="product_item_price">
+              <div class="price_old">99 999 ₽</div>
+              <div>9 999 ₽</div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="text-center mb-lg_7_5">
+  <h2 class="h1">Lorem ipsum </h2>
+  <p>Dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet pellentesque lectus, et imperdiet nisi sodales vel. Integer viverra volutpat urna ac laoreet. Etiam vitae lacus ac erat consectetur porttitor et sit amet ipsum. Nullam purus arcu, ultricies eu nibh et, pretium eleifend diam. Pellentesque dignissim augue ligula, nec egestas ante auctor sed. Aenean aliquam facilisis tempus. Donec auctor porttitor ante ut tincidunt. </p>
+ {% endcomment %}
+
+  {% endblock  %}
