исправил модальное окно - теперь там работают ссылки

--- a/carts/templates/carts/cart_modal.html
+++ b/carts/templates/carts/cart_modal.html
@@ -26,7 +26,7 @@
                 <div class="cart_menu_q">
 
                   <button type="button" class="q_btn dec">-</button>
-                  <input type="text" name="q_item" class="cart_menu_item_q" value="1">
+                  <input type="text" name="q_item" class="cart_menu_item_q" value="{{ cart.quantity }}">
                   <button type="button" class="q_btn inc">+</button>
 
                 </div>
