--- a/carts/templates/carts/cart_modal.html
+++ b/carts/templates/carts/cart_modal.html
@@ -17,7 +17,8 @@
               <div class="d-flex justify-content-between align-items-center mb-3">
                 <div class="cart_menu_item_title"><a href="{% url "goods:product" cart.product.slug %}">{{ cart.product.name }}</a></div>
 
-                <a href="#" type="button" class="del_cart_btn">
+                <a href="{% url "carts:cart_remove" %}" class="del_cart_btn remove-from-cart" data-cart-id="{{ cart.id }}">
+                  {% csrf_token %}
                   <img class="w-100" src={% static "icon/cart-mini-del.png" %} alt="Убрать">
                 </a>
               </div>
