Товары отображаются в order.html. Работает кнопка удалить, но без обновления и только в order (модальное окно придется переделывать). У products теперь есть sell_price - актуальная цена. Исправил ошибку в миксинах и в js

--- a/carts/templates/carts/cart_modal.html
+++ b/carts/templates/carts/cart_modal.html
@@ -10,7 +10,7 @@
         {% for cart in carts %}
           <div class="d-flex justify-content-between cart_menu_item">
             <div class="cart_menu_item_img">
-              <a href="{% url "goods:product" cart.product.slug %}"><img class="w-100" src="{{ product.image.url }}" alt={{ product.name }}></a>
+              <a href="{% url "goods:product" cart.product.slug %}"><img class="w-100" src="{{ cart.product.image.url }}" alt={{ cart.product.name }}></a>
             </div>
 
             <div class="cart_menu_item_content">
@@ -32,7 +32,7 @@
 
                 </div>
 
-                <div class="cart_menu_item_price">{{ cart.product.price }}</div>
+                <div class="cart_menu_item_price">{{ cart.product.sell_price }}</div>
 
               </div>
             </div>
@@ -41,7 +41,7 @@
         
         <div class="d-flex justify-content-between align-items-center mt-4 cart_menu_total">
           <div>Заказ на сумму</div>
-          <div>{{ cart.total_price }}</div>
+          <div>{{ carts.total_price }}</div>
         </div>
       </div>
 
