--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -28,7 +28,7 @@
                 {% if product.discount_price %}
                     <div class="product_item_price">
                         <div class="price_old">{{ product.price }} &#8381;</div>
-                        <div>{{ product.discount_price }} &#8381;</div>
+                        <div>{{ product.sell_price }} &#8381;</div>
                     </div>
 
                 {% else %}
