--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -45,7 +45,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-lg-auto me-16 mb-2 mb-lg-0 col-lg-7 justify-content-lg-between ">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Ссылка</a>
+                  <a class="nav-link" href="{% url "goods:index" %}">Каталог</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Ссылка</a>
