--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load carts_tags %}
+{% load menu_tags %}
 {% user_carts request as carts %}
 
 <!DOCTYPE html>
@@ -46,13 +47,14 @@
               <ul class="navbar-nav ms-lg-auto me-16 mb-2 mb-lg-0 col-lg-7 justify-content-lg-between ">
                 <li class="nav-item">
                   <a class="nav-link" href="{% url "goods:index" %}">Каталог</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Ссылка</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Ссылка</a>
-                </li>
+                </li>             
+                {% header_links as header_links %}
+                {% for link in header_links %}
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{ link.get_absolute_url }}">{{ link.title }}</a>
+                  </li>
+                {% endfor %}
+
               </ul>
             </div>
   
@@ -73,24 +75,25 @@
         <div class="row flex-column flex-lg-row justify-content-lg-between">
           <div class="col-12 col-lg-4 order-2 order-lg-1 text-center text-lg-start pt-2 mb-4 mb-lg-0">
             <div class="mb_2_3 mb-lg-4">
-              <a href="https://wa.me/79999999999"><img class="footer_icon" src= {% static "icon/whatsapp-icon.png" %} alt=""> +7 999 999 99 99</a>
+              <a href="#"><img class="footer_icon" src= {% static "icon/whatsapp-icon.png" %} alt=""> +7 999 999 99 99 </a>
             </div>
 
             <div class="">
-              <a href="mailto:example@example.ru"><img class="footer_icon" src= {% static "icon/mail-icon.png" %} alt=""> example@example.ru</a>
+              <a href="#"><img class="footer_icon" src= {% static "icon/mail-icon.png" %} alt=""> example@example.ru </a>
             </div>
 
           </div>
 
-          <div class="col-12 col-lg-6 order-3 order-lg-2 text-center text-lg-start pt-1 pt-lg-0">
+          <div class="col-12 col-lg-6 order-3 order-lg-2 pt-1 pt-lg-0">
             <nav class="navbar pt-0">
               <ul class="navbar-nav flex-lg-row flex-lg-wrap align-items-lg-stretch col">
-                <li class="nav-item col-lg-6"><a class="nav-link mb-4 mb-lg-3" href="#">Ссылка1</a></li>
-                <li class="nav-item col-lg-6"><a class="nav-link mb-4 mb-lg-3" href="#">Ссылка4</a></li>
-                <li class="nav-item col-lg-6"><a class="nav-link mb-4 mb-lg-3" href="#">Ссылка2</a></li>
-                <li class="nav-item col-lg-6"><a class="nav-link mb-4 mb-lg-3" href="#">Ссылка5</a></li>
-                <li class="nav-item col-lg-6"><a class="nav-link mb-4 mb-lg-3" href="#">Ссылка3</a></li>
-                <li class="nav-item col-lg-6"><a class="nav-link mb-4 mb-lg-3" href="#">Ссылка6</a></li>							
+                {% footer_links as footer_links %}
+                {% for link in footer_links %}
+                  <li class="nav-item col-lg-6">
+                    <a class="nav-link mb-4 mb-lg-3 text-center text-lg-start" href="{{ link.get_absolute_url }}">{{ link.title }}</a>
+                  </li>
+                {% endfor %}            
+
               </ul>
             </nav>
           </div>
@@ -100,6 +103,7 @@
               <img class="footer_logo" src= {% static "images/logo.png" %} alt="" width="100" height="100">
             </a>
           </div>
+
         </div>
       </div>
   
